10/19 Update : Julius Perez

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -10,7 +10,7 @@ TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
-GameInstanceClass=/Script/Engine.GameInstance
+GameInstanceClass=/Game/FirstPersonBP/GI_Invenotry.GI_Invenotry_C
 GameDefaultMap=/Game/Maps/Main_Menu_level.Main_Menu_level
 ServerDefaultMap=/Engine/Maps/Entry
 GlobalDefaultGameMode=/Game/Main_Menu/MainMenuGameMode.MainMenuGameMode_C
