--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -10,10 +10,10 @@ TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
-GameInstanceClass=/Game/FirstPersonBP/GI_Invenotry.GI_Invenotry_C
+GameInstanceClass=/Script/Engine.GameInstance
 GameDefaultMap=/Game/Maps/Main_Menu_level.Main_Menu_level
 ServerDefaultMap=/Engine/Maps/Entry
-GlobalDefaultGameMode=/Game/Main_Menu/MainMenuGameMode.MainMenuGameMode_C
+GlobalDefaultGameMode=/Game/FirstPersonBP/Blueprints/FirstPersonGameMode.FirstPersonGameMode_C
 GlobalDefaultServerGameMode=None
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
